fixed content area horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ body,
 
 .landingInGradient:before {
   content: '';
-  background-image: radial-gradient(#db3a8a, transparent 60%);
+  background-image: radial-gradient(#f1499f, transparent 60%);
   position: absolute;
   width: 70%;
   height: 1220px;
@@ -218,16 +218,17 @@ body,
 }
 .nav-link {
   position: relative;
+  font-size: 14px;
 }
 .nav-link::before,
 .nav-link::before {
   content: '';
   position: absolute;
   display: block;
-  width: calc(100% + 20px);
+  width: 100%;
   height: 2px;
-  bottom: -3px;
-  left: -10px;
+  bottom: -8px;
+  left: 0;
   background-color: #ffffff;
   transform: scaleX(0);
   transition: transform 0.3s ease-in;
